--- a/_config.yml
+++ b/_config.yml
@@ -67,9 +67,9 @@ author:
 # You can reorder the items to define the link order.
 # If you want to add a new link that isn't here, you'll need to also edit the file _data/SocialNetworks.yml
 social-network-links:
-  //rss: true
+  #rss: true
   email: "ms.mai.t.tran@gmail.com"
-  //facebook:
+  #twitter:
   github: msmaitran
   twitter: ms_maitran
 #  reddit: yourname
