--- a/_config.yml
+++ b/_config.yml
@@ -71,11 +71,10 @@ author:
 social-network-links:
   #rss: true
   email: "ms.mai.t.tran@gmail.com"
-  #twitter:
   github: msmaitran
   twitter: ms_maitran
 #  reddit: yourname
-#  linkedin: daattali
+  linkedin: msmaitran
 #  xing: yourname
 #  stackoverflow: "3943160/daattali"
 #  snapchat: deanat78
