--- a/_config.yml
+++ b/_config.yml
@@ -74,7 +74,7 @@ social-network-links:
   github: msmaitran
   twitter: ms_maitran
 #  reddit: yourname
-  linkedin: msmaitran
+  linkedin: msmaitran/
 #  xing: yourname
 #  stackoverflow: "3943160/daattali"
 #  snapchat: deanat78
